--- a/src/main/resources/templates/Fragments/User/sidebar.html
+++ b/src/main/resources/templates/Fragments/User/sidebar.html
@@ -24,9 +24,9 @@
             </a>
         </li>
         <li>
-            <a th:href="@{/Admin/slices}" th:classappend="${activeMenu == 'slices' ? 'active' : ''}" data-section="slices">
+            <a th:href="@{/User/slice}" th:classappend="${activeMenu == 'slice' ? 'active' : ''}" data-section="slice">
                 <i class="fas fa-layer-group"></i>
-                <span>Slices</span>
+                <span>Slice</span>
             </a>
         </li>
         <li>
