--- a/src/main/resources/templates/UserPages/SliceView.html
+++ b/src/main/resources/templates/UserPages/SliceView.html
@@ -862,9 +862,9 @@
 <script type="text/javascript" src="../static/js/core/popper.min.js"></script>
 <script type="text/javascript" src="../static/js/core/bootstrap.min.js"></script>
 
-<!-- Topology Creator JS -->
+<!-- Slice View JS -->
 <script type="text/javascript" th:src="@{/slice/vis/vis-network.js}"></script>
-<script type="module" th:src="@{/slice/slice-view/view.js}"></script>
+<script type="module" th:src="@{/slice/slice/slice-view.js}"></script>
 <!-- Data de la Slice -->
 <div id="slice-data" th:data-slice-id="${sliceId}" style="display: none;"></div>
 
