--- a/src/main/resources/templates/UserPages/SketchView.html
+++ b/src/main/resources/templates/UserPages/SketchView.html
@@ -459,7 +459,7 @@
                 <form id="addLinkForm">
                     <div class="input-group input-group-static mb-4">
                         <label>Nombre</label>
-                        <input type="text" class="form-control" id="linkName" placeholder="Ejemplo: Red-A">
+                        <input disabled type="text" class="form-control" id="linkName" placeholder="Ejemplo: Red-A">
                     </div>
                 </form>
             </div>
