--- a/src/main/resources/templates/UserPages/SliceList.html
+++ b/src/main/resources/templates/UserPages/SliceList.html
@@ -68,6 +68,19 @@
 
     <!-- Estilos extra -->
     <style>
+        .avatar {
+            background: linear-gradient(135deg, #69666c, #1f1f20);
+            color: white;
+            font-weight: bold;
+            font-size: 1.2rem;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
         #network-container {
             outline: none !important;
             position: relative !important;
