--- a/src/main/resources/templates/UserPages/SliceView.html
+++ b/src/main/resources/templates/UserPages/SliceView.html
@@ -273,7 +273,7 @@
             <div class="row mb-4">
                 <div class="col-12 text-center">
                     <h2 class="content-title text-3xl text-start font-weight-bolder font-weight-bold mb-2 animate__animated animate__zoomInLeft animate__slow" style="font-weight: 900">
-                        VISUALIZADOR DE SLICE
+                        VISUALIZADOR DE SLICEs
                     </h2>
                     <p class="text-sm text-start text-secondary mb-4 animate__animated animate__backInLeft animate__delay-5s">
                         Visualiza y gestiona tu Slice desplegada con nuestra herramienta interactiva. Monitorea el estado de tus máquinas virtuales, interfaces de red y conexiones.
