fix: Navier-Stokes

--- a/src/main/resources/templates/UserPages/SketchView.html
+++ b/src/main/resources/templates/UserPages/SketchView.html
@@ -256,14 +256,14 @@
 
                     <!-- Panel de información del Sketch -->
                     <div class="card mb-4 panel-card panel-card-1">
-                        <div class="card-header p-3 bg-gradient-primary">
+                        <div class="card-header p-3 bg-gradient-dark">
                             <h6 class="mb-0 text-white">Información del Sketch</h6>
                             <p class="text-white text-sm mb-0">Detalles sobre el propio sketch</p>
                         </div>
                         <div class="card-body p-3">
                             <!-- ID del Sketch -->
                             <div class="d-flex align-items-center mb-3">
-                                <div class="icon icon-shape icon-sm bg-gradient-primary shadow text-center me-2">
+                                <div class="icon icon-shape icon-sm bg-gradient-dark shadow text-center me-2">
                                     <i class="material-symbols-rounded text-white opacity-10">tag</i>
                                 </div>
                                 <div>
@@ -274,7 +274,7 @@
                             
                             <!-- Nombre del Sketch -->
                             <div class="d-flex align-items-center mb-3">
-                                <div class="icon icon-shape icon-sm bg-gradient-primary shadow text-center me-2">
+                                <div class="icon icon-shape icon-sm bg-gradient-dark shadow text-center me-2">
                                     <i class="material-symbols-rounded text-white opacity-10">title</i>
                                 </div>
                                 <div>
@@ -285,7 +285,7 @@
 
                             <!-- Descripción -->
                             <div class="d-flex align-items-center mb-3">
-                                <div class="icon icon-shape icon-sm bg-gradient-primary shadow text-center me-2">
+                                <div class="icon icon-shape icon-sm bg-gradient-dark shadow text-center me-2">
                                     <i class="material-symbols-rounded text-white opacity-10">description</i>
                                 </div>
                                 <div>
