--- a/src/main/resources/templates/Fragments/User/footer.html
+++ b/src/main/resources/templates/Fragments/User/footer.html
@@ -6,7 +6,7 @@
 <body>
 <footer th:fragment="footer" class="footer">
     <div class="footer-content">
-        <p>© 2025 PUCP Private Cloud Orchestrator. Todos los derechos reservados.</p>
+        <p class="mb-0">© 2025 OpenCluster - PUCP. Todos los derechos reservados.</p>
     </div>
 </footer>
 </body>
