--- a/src/main/resources/templates/Fragments/User/sidebar.html
+++ b/src/main/resources/templates/Fragments/User/sidebar.html
@@ -7,7 +7,10 @@
 <aside th:fragment="sidebar(activeMenu)" class="sidebar">
     <div class="sidebar-header">
         <div class="logo">
-            <i class="fas fa-cubes"></i>
+            <span class="fa-stack">
+                <i class="fa-solid fa-laptop-code fa-stack-1x"></i>
+                <i class="fas fa-cloud fa-stack-1x" style="transform: translate(35%, 35%) scale(0.85);"></i>
+            </span>
             <div class="logo-text">Open<span>Cluster</span></div>
         </div>
         <button class="sidebar-toggle">
