--- a/src/main/resources/templates/UserPages/SliceView.html
+++ b/src/main/resources/templates/UserPages/SliceView.html
@@ -262,7 +262,7 @@
 <body class="bg-gray-100">
 <div class="app-container">
     <!-- Sidebar -->
-    <div th:replace="~{Fragments/User/sidebar :: sidebar('slices')}"></div>
+    <div th:replace="~{Fragments/User/sidebar :: sidebar('slice')}"></div>
 
     <!-- Contenido principal -->
     <main class="main-content">
